# k8s-metrics-bazel-repro

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  main.go
