load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Gazelle configuration
gazelle(name = "gazelle")

go_library(
    name = "k8s-metrics-repro_lib",
    srcs = ["main.go"],
    importpath = "github.com/k8s-metrics-repro",
    visibility = ["//visibility:private"],
    deps = ["@io_k8s_metrics//pkg/apis/metrics/v1beta1"],
)

go_binary(
    name = "k8s-metrics-repro",
    embed = [":k8s-metrics-repro_lib"],
    visibility = ["//visibility:public"],
)
