module(
    name = "k8s_metrics_repro",
    version = "0.1",
)

bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "io_k8s_metrics",
)

# uncomment the following line to fix the error
# go_deps.gazelle_default_attributes(
#     directives = [
#         "gazelle:go_generate_proto false",
#     ],
# )
